<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_contact_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <AutoCompleteTextView
        android:id="@+id/auto_complete_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_search_contact"
        android:lines="1">
    </AutoCompleteTextView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_bubble_them"
        android:id="@+id/bt_bubble_them"
        android:layout_gravity="end"
        android:onClick="onButtonClick"
        android:enabled="false"
        android:layout_below="@+id/auto_complete_text_view"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Last bubulé contacts"
        android:id="@+id/textView"
        android:layout_below="@+id/bt_bubble_them"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView">

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/victim_list"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/no_recent_contact_found"
            android:id="@+id/no_recent_contact_found"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loading_recents_progressbar"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="visible" />
    </RelativeLayout>

</RelativeLayout>