<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.05"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/placeholder"
            android:id="@+id/contact_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/placeholder"
            android:id="@+id/contact_phone_type"
            android:layout_below="@+id/contact_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/placeholder"
            android:id="@+id/contact_phone_number"
            android:layout_alignTop="@+id/contact_phone_type"
            android:layout_toEndOf="@+id/contact_phone_type"
            android:layout_marginStart="5dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/contact_image"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_below="@+id/contact_phone_type"
        android:layout_above="@+id/nb_bubbles_sent"
        android:layout_alignParentStart="true"
        android:contentDescription="Display image of the contact" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/contact_image"
        android:background="#90e8e8e8"
        android:gravity="center">

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/bubbling"
                android:id="@+id/bubbling"
                android:layout_toEndOf="@+id/progressBar"
                android:layout_marginStart="5dp" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_bubbles"
        android:id="@+id/bt_stop_bubbles"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="stopBubbleHandler"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/no_messages_sent"
        android:id="@+id/nb_bubbles_sent"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/bt_stop_bubbles"
        android:layout_marginTop="26dp" />
</RelativeLayout>
